# psychrochart

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  run_tests.yml
notebooks/: Usage example of psychrochart.ipynb
psychrochart/: __init__.py  __main__.py  agg.py  ashrae_chart_style.json  chart.py  chart_entities.py  chartdata.py  chartzones.py  default_chart_config.json  default_comfort_zones.json  equations - Copy.py  equations.py  interior_chart_style.json  plot_logic.py  process_logic.py  psychrocurves.py  psychrolib_extra.py  psychroplot.py  psychrovars.py  styling.py  util.py
psychrochart/chart_styles/: ashrae_chart_style.json  ashrae_ip_chart_style.json  default_chart_config.json  default_comfort_zones.json  interior_chart_style.json  minimal_chart_style.json
psychrochart/models/: annots.py  base.py  config.py  curves.py  parsers.py  styles.py  validators.py
tests/: conftest.py  test_annotations.py  test_artist_registry.py  test_axes_limits.py  test_chart_config_update.json  test_chart_zones.py  test_config_mutation.py  test_curves.py  test_curves_models.py  test_generate_rsc.py  test_ha_addon_chart.py  test_models.py  test_overlay_info.py  test_pickable_chart.py  test_plot_chart.py  test_profile_mem_reuse_chart.py  test_psychrometrics.py  test_reuse_chart.py  test_serialization.py  test_styled_annotations.py  test_utils.py
tests/example-charts/: splash-chart.css
