[tool.black]
line_length = 79
target_version = ["py311"]

[tool.isort]
profile = "black"
force_sort_within_sections = true
combine_as_imports = true
line_length = 79
py_version=311

[tool.ruff]
fix = true
line-length = 79

[tool.coverage.run]
branch = true
source = ["psychrochart"]
relative_files = true

[tool.coverage.paths]
source = ["psychrochart/"]

[tool.coverage.report]
fail_under = 75
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
minversion = 6.0
testpaths = "tests"
addopts = "-vv -s --cov psychrochart --cov-report term --cov-report html"
log_level = "INFO"
log_cli = true
log_format = "%(asctime)s %(levelname)s: (%(filename)s:%(lineno)s): %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry]
name = "psychrochart"
version = "0.9.2"
description = "A python 3 library to make psychrometric charts and overlay information on them"
authors = ["Eugenio Panadero <eugenio.panadero@gmail.com>"]
packages = [
    { include = "psychrochart" }
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/azogue/psychrochart"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords=["psychrometrics", "moist", "humid air", "climate control", "matplotlib"]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = ">=3.7"
scipy = ">=1.10"
psychrolib = ">=2.5"
pydantic = ">=1.8,<2"
python-slugify = ">=8.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.10.0"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
