[tool.ruff]
target-version = "py311"
fix = true
line-length = 79

[tool.ruff.lint]
select = ["A", "ARG", "ASYNC", "B", "BLE", "C", "C4", "E", "F", "FA", "I", "INT", "N", "PIE", "PTH", "RUF", "SIM", "TCH", "TD", "W", "YTT"]
ignore = ["B008", "B904", "B905", "TD002", "TD003", "TD004", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["psychrochart"]
order-by-type = false

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
#disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
# disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

#profile = "black"
#force_sort_within_sections = true
#combine_as_imports = true

[tool.coverage.run]
branch = true
source = ["psychrochart"]
relative_files = true

[tool.coverage.paths]
source = ["psychrochart/"]

[tool.coverage.report]
fail_under = 75
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
minversion = 6.0
testpaths = "tests"
addopts = "-vv -s --cov psychrochart --cov-report term --cov-report html"
log_level = "INFO"
log_cli = true
log_format = "%(asctime)s %(levelname)s: (%(filename)s:%(lineno)s): %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry]
name = "psychrochart"
version = "0.10.0"
description = "A python 3 library to make psychrometric charts and overlay information on them"
authors = ["Eugenio Panadero <eugenio.panadero@gmail.com>"]
packages = [
    { include = "psychrochart" }
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/azogue/psychrochart"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords=["psychrometrics", "moist", "humid air", "climate control", "matplotlib"]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = ">=3.7"
scipy = ">=1.10"
psychrolib = ">=2.5"
pydantic = ">=2.3.0"
python-slugify = ">=8.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.10.0"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
