[wheel]
universal = 1

[metadata]
license_file = LICENSE

[aliases]
test=pytest

# [tool:pytest]
# addopts = --verbose

# instead of .coveragerc
[coverage:run]
omit = */tests/*

[coverage:report]
show_missing = true
# Regexes for lines to exclude from consideration
exclude_lines =
    pragma: no cover
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if not test_mode:
    os.mkdir

[coverage:html]
title = PSYCHROCHART code coverage
